--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass": "^1.70.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.11.13",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
